--- a/v2/public/stylesheets/style.css
+++ b/v2/public/stylesheets/style.css
@@ -1,15 +1,20 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
 
 body {
-  font-family: Lato;
+  font-family: Lato, sans-serif;
+  padding-top: 50px;
 }
 
+nav {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 .navbar-static-top {
   margin-bottom: 0px;
   background-color: #000;
 }
 .navbar-header > a img {
   border-radius: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .banner {
@@ -17,6 +22,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 600px;
+  width: 100%;
+  position: fixed;
 }
 .banner-text-container {
   position: relative;
@@ -27,18 +34,25 @@ body {
   color: #fff;
   width: 100%;
   bottom: 200px;
+  text-shadow: 1px 1px #000;
 }
 .banner-text h1 {
   font-weight: bold;
   margin: 0;
 }
 
+#wrapper {
+  position: relative;
+  padding-top: 600px;
+}
+
 .portfolio {
   color: #fff;
-  background-color: #222;
+  background-color: #353330;
   height: 500px;
   overflow: hidden;
   height: 1%;
+  box-shadow: 0px -5px 60px -10px rgba(0,0,0,1);
 }
 #portfolio {
   margin: 0 auto;
@@ -47,23 +61,30 @@ body {
 }
 #portfolio .item {
   width: 360px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   background-color: #eee;
   color: #000;
   padding: 10px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  border-radius: 4px;
 }
 #portfolio .item #stack {
   color: #666;
 }
 
+.skills {
+  background-color: #fff;
+}
 #skills {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 85px;
 }
 
 .contact {
   background-color: #32bad5;
   color: #fff;;
+  padding-bottom: 20px;
+  text-shadow: 1px 1px rgba(0,0,0,0.5);
 }
 .contact h3 {
   font-weight: bold;
@@ -71,6 +92,13 @@ body {
 #contact-form {
   width: 500px;
   margin: 0 auto;
+}
+#contact-form input,
+#contact-form textarea {
+  font-family: monaco, monospace;
+}
+#contact-form button {
+  background-color: #FF4A37;
 }
 
 .progress{
@@ -81,6 +109,9 @@ body {
 }
 
 footer {
-  /*color: #ddd;*/
-  /*background-color: transparent;*/
+  padding-bottom: 3px;
+  background-color: #0095B3;
+}
+footer img {
+  width: 16px;
 }
