--- a/v2/app_server/views/layout.jade
+++ b/v2/app_server/views/layout.jade
@@ -6,6 +6,7 @@ html
 
     title Wahid Rahim
 
+    link(rel='shortcut icon', href='/images/favicon.ico', type='image/x-icon')
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
@@ -45,4 +46,5 @@ html
     script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     script(src='/bower_components/masonry/dist/masonry.pkgd.min.js')
     script(src='/bower_components/imagesloaded/imagesloaded.pkgd.min.js')
+    script(src='/bower_components/bootstrap-validator/dist/validator.min.js')
     script(src='/javascripts/scripts.js')
