--- a/v2/public/stylesheets/style.css
+++ b/v2/public/stylesheets/style.css
@@ -100,6 +100,15 @@ nav {
 #contact-form button {
   background-color: #FF4A37;
 }
+#mail-success {
+  width: 500px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+#mail-success,
+.help-block ul li {
+  text-shadow: none;
+}
 
 .progress{
   box-shadow: 1px 1px rgba(0,0,0,0.3);
