integrated carpet blog engine

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -30,6 +30,8 @@ html
               a(href='#skills') skills
             li
               a(href='#contact') contact
+            li
+              a(href='/blog') blog
 
     block content
 
