--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -29,6 +29,18 @@ block content
                   a(href='https://github.com/wahidrahim/blackboard' target='_blank')
                     | https://github.com/wahidrahim/blackboard
 
+                // CARPET
+                .item
+                  img.img-responsive(src='http://i.imgur.com/qq80zjW.png')
+                  a(href='http://carpetblog.herokuapp.com/', target='_blank')
+                    h3 Carpet
+                  #stack
+                    i Node.js, Express.js, Markdown
+                  #desc
+                    | A simple static blog engine. Built for extensibility and use of use.
+                  a(href='https://github.com/wahidrahim/carpet', target='_blank')
+                    | https://github.com/wahidrahim/carpet
+
                 // MEAN-TODO-APP
                 .item
                   img.img-responsive(src='http://i.imgur.com/uHPveze.jpg')
