--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -37,7 +37,7 @@ block content
                   #stack
                     i Node.js, Express.js, Markdown
                   #desc
-                    | A simple static blog engine. Built for extensibility and use of use.
+                    | A simple static blog engine. Built for extensibility and ease of use.
                   a(href='https://github.com/wahidrahim/carpet', target='_blank')
                     | https://github.com/wahidrahim/carpet
 
