--- a/app_server/views/article.jade
+++ b/app_server/views/article.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/github.min.css')
   body
     #wrapper
-      a(href='/') back to articles
+      a(href='/blog') back to articles
 
       h1.title= title
       span= date
