--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -19,15 +19,15 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/')
-            img(src='http://www.gravatar.com/avatar/e3a6c331a73d1a98317a521a2d270085?s=50')
+          a.navbar-brand(href='/') WR
+            //-img(src='http://www.gravatar.com/avatar/e3a6c331a73d1a98317a521a2d270085?s=50')
 
         #navbar-main.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
               a(href='#portfolio') portfolio
             li
-              a(href='#skills') skills
+              a(href='#skills-top') skills
             li
               a(href='#contact') contact
             li
