--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,900);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
 
 body {
   font-family: Lato, sans-serif;
@@ -17,13 +17,18 @@ nav {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.container-fluid {
+  height: 100vh;
+}
+
 .banner {
-  background-image: url(../images/banner.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 600px;
+  height: 100vh;
   width: 100%;
-  position: fixed;
+  background: url(../images/banner.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .banner-text-container {
   position: relative;
@@ -43,7 +48,6 @@ nav {
 
 #wrapper {
   position: relative;
-  padding-top: 600px;
 }
 
 .portfolio {
@@ -76,8 +80,7 @@ nav {
   background-color: #fff;
 }
 #skills {
-  padding-top: 100px;
-  padding-bottom: 85px;
+  margin-top: 40vh;
 }
 
 .contact {
@@ -115,6 +118,13 @@ nav {
 }
 .progress .progress-bar {
   background-color: #32bad5;
+}
+
+#contact {
+  margin-top: 30vh;
+}
+#contact h3 {
+  margin-bottom: 20px;
 }
 
 footer {
