changed fonts and removed powered by text

--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -166,7 +166,7 @@ block content
     .contact.container-fluid
       .row
         #contact.container
-          h3.text-center contact me
+          h3.text-center Contact me
           .col-xs-12
             form#contact-form(role='form', data-toggle='validator', data-disable='false')
               fieldset
