--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -40,7 +40,7 @@ html
       .container
         .row
           .col-xs-3.tex-left
-            small powered by #[img(src='/images/nodejs.png')]
+            small #[img(src='/images/nodejs.png')]
           .col-xs-9.text-right
             small &copy; Wahid Rahim 2016
 
