blogger ror card

--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -44,6 +44,20 @@ block content
                   a(href='https://github.com/wahidrahim/carpet', target='_blank')
                     | https://github.com/wahidrahim/carpet
 
+                // CANDY-CRASH
+                .item
+                  video.img-responsive
+                    source(src='https://fat.gfycat.com/GiftedWelldocumentedKingfisher.mp4', type='video/mp4')
+                    source(src='https://fat.gfycat.com/GiftedWelldocumentedKingfisher.webm', type='video/webm')
+                  //-img.img-responsive(src='http://i.imgur.com/ry1sXHy.gif')
+                  h3 Candy-Crash
+                  #stack
+                    i C++, Bash, X-graphics
+                  #desc
+                    | A match-3 type of game, written in C++, in collaboration with Larry Li.
+                  a(href='https://github.com/wahidrahim/Candy-Crash')
+                    | https://github.com/wahidrahim/Candy-Crash
+
                 // MEAN-TODO-APP
                 .item
                   img.img-responsive(src='http://i.imgur.com/uHPveze.jpg')
@@ -54,6 +68,19 @@ block content
                     | The 'Hello World' of CRUD apps.
                   a(href='https://github.com/wahidrahim/mean-todo-app')
                     | https://github.com/wahidrahim/mean-todo-app
+
+                // BLOGGER
+                .item
+                  img.img-responsive(src='http://i.imgur.com/dgkoQjO.png')
+                  a(href='http://mighty-ridge-8411.herokuapp.com/')
+                    h3 blogger
+                  #stack
+                    i Ruby on Rails
+                  #desc
+                    | Blogging app, including authentication and commenting
+                  a(href='https://github.com/wahidrahim/blogger')
+                    | https://github.com/wahidrahim/blogger
+
 
                 // BREAKOUT-JS
                 .item
@@ -69,20 +96,6 @@ block content
                     | The classic game in pure Object Oriented JavaScript.
                   a(href='https://github.com/wahidrahim/Breakout-JS')
                     | https://github.com/wahidrahim/Breakout-JS
-
-                // CANDY-CRASH
-                .item
-                  video.img-responsive
-                    source(src='https://fat.gfycat.com/GiftedWelldocumentedKingfisher.mp4', type='video/mp4')
-                    source(src='https://fat.gfycat.com/GiftedWelldocumentedKingfisher.webm', type='video/webm')
-                  //-img.img-responsive(src='http://i.imgur.com/ry1sXHy.gif')
-                  h3 Candy-Crash
-                  #stack
-                    i C++, Bash, X-graphics
-                  #desc
-                    | A match-3 type of game, written in C++, in collaboration with Larry Li.
-                  a(href='https://github.com/wahidrahim/Candy-Crash')
-                    | https://github.com/wahidrahim/Candy-Crash
 
                 // RESIZE-FONT
                 .item
