static blog engine article, font change, and added disqus

--- a/app_server/views/article.jade
+++ b/app_server/views/article.jade
@@ -12,6 +12,9 @@ html
       .body
         != body
 
+    #disqus
+      include disqus.html
+
     script(src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js')
     script.
       hljs.initHighlightingOnLoad();
