--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,10 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300);
 
 body {
   padding: 50px;
-  font: 14px "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
 }
-
 a {
   color: #00B7FF;
   text-decoration: none;
@@ -18,16 +17,19 @@ a:hover {
   margin: 0;
 }
 
-#wrapper {
-  width: 700px;
+#wrapper,
+#disqus {
+  width: 720px;
   margin: 0 auto;
 }
 
 .article {
   border-radius: 2px;
-  border-bottom: 1px solid;
   border-bottom-color: rgba(1,1,1,0.1);
   padding: 10px;
+}
+.article h3 {
+  font-size: 2em;
 }
 
 .tags {
@@ -37,10 +39,9 @@ a:hover {
 }
 .tag {
   background-color: rgba(1,1,1,0.2);
-  border-radius: 2px;
   display: inline;
   margin-right: 5px;
-  padding: 1px 5px 1px 5px;
+  padding: 2px 6px 2px 6px;
 }
 
 .title {
@@ -49,21 +50,24 @@ a:hover {
 
 .body {
   margin-top: 50px;
-}
-.body {
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: lighter;
 }
 .body p {
   text-align: justify;
   text-justify: inner-word;
+}
+.body p code {
+  color: #880000;
+  background-color: rgba(255,0,0,0.1);
+  padding: 0 3px 0 3px;
+  border-radius: 5px;
 }
 
 code {
   font-family: monaco, consolas, "lucida console", monospace;
   font-size: 17px;
 }
-
-
 
 .hljs {
   white-space: pre;
