--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,6 +109,12 @@ nav {
 }
 #contact #submit {
   background-color: #FE4100;
+  text-shadow: 1px 1px rgba(1,1,1,0.5);
+  box-shadow: 0px 2px rgba(0,0,0,0.5);
+}
+#contact #submit:active {
+  text-shadow: -1px -1px rgba(1,1,1,0.5);
+  box-shadow: 0px -1px rgba(1,1,1,0.5);
 }
 
 #footer {
