updated blogger demo url

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,7 +79,7 @@ block content
       // BLOGGER
       .item
         img.img-responsive(src='http://i.imgur.com/dgkoQjO.png')
-        a(href='http://mighty-ridge-8411.herokuapp.com/')
+        a(href='http://bloggerails.herokuapp.com/')
           h3 blogger
         .stack
           i Ruby on Rails
