--- a/views/index.jade
+++ b/views/index.jade
@@ -62,7 +62,7 @@ block content
           i C++, Bash, X-graphics
         .desc
           | A match-3 type of game, written in C++, in collaboration with Larry Li.
-        a(href='https://github.com/wahidrahim/Candy-Crash')
+        a(href='https://github.com/wahidrahim/Candy-Crash', target='_blank')
           | https://github.com/wahidrahim/Candy-Crash
 
       // MEAN-TODO-APP
@@ -73,7 +73,7 @@ block content
           i MongoDB, Express.js, Angular.js, Node.js
         .desc
           | The 'Hello World' of CRUD apps.
-        a(href='https://github.com/wahidrahim/mean-todo-app')
+        a(href='https://github.com/wahidrahim/mean-todo-app', target='_blank')
           | https://github.com/wahidrahim/mean-todo-app
 
       // BLOGGER
@@ -85,7 +85,7 @@ block content
           i Ruby on Rails
         .desc
           | Blogging app, including authentication and commenting
-        a(href='https://github.com/wahidrahim/blogger')
+        a(href='https://github.com/wahidrahim/blogger', target='_blank')
           | https://github.com/wahidrahim/blogger
 
 
@@ -95,14 +95,14 @@ block content
           source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.mp4', type='video/mp4')
           source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.webm', type='video/webm')
         //-img.img-responsive(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.gif')
-        a(href='https://goo.gl/Ef3CsR')
-          h3 breakout-js
+        a(href='http://breakout-arcade.herokuapp.com/', target='_blank')
+          h3 breakout-arcade
         .stack
           i JavaScript, HTML, CSS
         .desc
           | The classic game in pure Object Oriented JavaScript.
-        a(href='https://github.com/wahidrahim/Breakout-JS')
-          | https://github.com/wahidrahim/Breakout-JS
+        a(href='https://github.com/wahidrahim/breakout-arcade', target='_blank')
+          | https://github.com/wahidrahim/breakout-arcade
 
       // RESIZE-FONT
       .item
@@ -115,7 +115,7 @@ block content
           i VimL
         .desc
           | A tiny script for making fonts bigger/smaller in gVim.
-        a(href='https://github.com/wahidrahim/resize-font.vim')
+        a(href='https://github.com/wahidrahim/resize-font.vim', target='_blank')
           | https://github.com/wahidrahim/resize-font.vim
 
   #skills-top
